<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_radius_16"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dp_24"
    android:paddingVertical="@dimen/dp_20">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_500"
        android:gravity="center"
        android:text="@string/timer"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:fontFamily="@font/roboto_400"
        android:text="@string/hour"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="@id/edt_hour"
        app:layout_constraintStart_toStartOf="@id/edt_hour"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <EditText
        android:id="@+id/edt_hour"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_60"
        android:text="0"
        android:gravity="center"
        android:textSize="@dimen/sp_20"
        android:fontFamily="@font/roboto_500"
        android:textColor="@color/black"
        android:background="@drawable/bg_edt_timer"
        app:layout_constraintEnd_toStartOf="@id/edt_minute"
        android:layout_marginTop="@dimen/dp_10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hour" />

    <TextView
        android:id="@+id/tv_minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:fontFamily="@font/roboto_400"
        android:text="@string/minutes"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="@id/edt_minute"
        app:layout_constraintStart_toStartOf="@id/edt_minute"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <EditText
        android:id="@+id/edt_minute"
        android:layout_width="@dimen/dp_80"
        android:inputType="number"
        android:layout_height="@dimen/dp_60"
        android:text="0"
        android:gravity="center"
        android:textSize="@dimen/sp_20"
        android:fontFamily="@font/roboto_500"
        android:textColor="@color/black"
        android:background="@drawable/bg_edt_timer"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edt_hour"
        app:layout_constraintTop_toBottomOf="@id/tv_minute" />

    <TextView
        android:id="@+id/btn_save"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_24"
        android:background="@drawable/bg_btn_save"
        android:fontFamily="@font/roboto_500"
        android:gravity="center"
        android:paddingVertical="@dimen/dp_14"
        android:text="@string/text_save"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_hour" />

</androidx.constraintlayout.widget.ConstraintLayout>