<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_corner_white_12"
        android:backgroundTint="@color/white"
        android:paddingHorizontal="@dimen/dp_18"
        android:paddingVertical="@dimen/dp_20">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_warning"
            android:layout_width="@dimen/dp_64"
            android:layout_height="@dimen/dp_64"
            android:src="@drawable/ic_warning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:fontFamily="@font/roboto_400"
            android:gravity="center"
            android:text="@string/des_warning"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintTop_toBottomOf="@id/iv_warning" />

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/bg_btn_save"
            android:fontFamily="@font/roboto_500"
            android:gravity="center"
            android:paddingVertical="@dimen/dp_13"
            android:text="@string/text_cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_exit"
            app:layout_constraintTop_toBottomOf="@id/tv_content" />

        <TextView
            android:id="@+id/btn_exit"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/bg_btn_save"
            android:backgroundTint="@color/black_10"
            android:fontFamily="@font/roboto_500"
            android:gravity="center"
            android:paddingVertical="@dimen/dp_13"
            android:text="@string/exit"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toStartOf="@id/btn_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>