<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_corner_white_12"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dp_20">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgRate"
            android:layout_width="@dimen/dp_52"
            android:layout_height="@dimen/dp_52"
            android:layout_marginTop="@dimen/dp_20"
            android:src="@drawable/img_ic_rate_0" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:fontFamily="@font/roboto_500"
            android:includeFontPadding="false"
            android:text="@string/rating_title_0"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:fontFamily="@font/roboto_500"
            android:gravity="center"
            android:includeFontPadding="false"
            android:minLines="2"
            android:text="@string/rating_description_0"
            android:textAlignment="center"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <com.hdt.sleepsound.utils.view.RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_52"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            app:defaultRate="0"
            app:emptyLastStarDrawable="@drawable/img_star_outline_last"
            app:emptyStarDrawable="@drawable/img_star_outline"
            app:filledLastStarDrawable="@drawable/img_star_filled"
            app:filledStarDrawable="@drawable/img_star_filled"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRateSuggest"
            app:maxRating="5" />

        <LinearLayout
            android:id="@+id/llFocusItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_5"
            android:gravity="center"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRateSuggest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_500"
                android:gravity="center"
                android:includeFontPadding="false"
                android:lines="2"
                android:paddingHorizontal="@dimen/dp_10"
                android:paddingVertical="@dimen/dp_5"
                android:text="@string/the_best_we_can_get"
                android:textColor="@color/primary"
                android:textSize="@dimen/sp_14" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_arrow"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_marginStart="-20dp"
                android:layout_marginEnd="@dimen/dp_28"
                android:tint="@color/primary"
                android:src="@drawable/img_arrow_ratting" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_24"
            android:background="@drawable/bg_btn"
            android:fontFamily="@font/roboto_600"
            android:paddingVertical="@dimen/dp_12"
            android:text="@string/rate"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            app:cornerRadius="@dimen/dp_30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratingBar" />
    </LinearLayout>

</RelativeLayout>