<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app">

    <RelativeLayout
        android:id="@+id/rl_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_primary"
        android:paddingHorizontal="@dimen/dp_16"
        android:paddingTop="@dimen/dp_40"
        android:paddingBottom="@dimen/dp_16"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_title"
            android:layout_alignBottom="@id/tv_title"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_toEndOf="@id/btn_back"
            android:fontFamily="@font/roboto_700"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:padding="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_appbar">

        <LinearLayout
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/bg_corner_white_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dp_16"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_setting_policy"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dp_16"
                    android:src="@drawable/ic_setting_policy" />

                <TextView
                    android:id="@+id/tv_setting_policy"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:fontFamily="@font/roboto_500"
                    android:layout_toStartOf="@id/iv_next_policy"
                    android:layout_toEndOf="@+id/iv_setting_policy"
                    android:text="@string/setting_policy"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_next_policy"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dp_12"
                    android:src="@drawable/ic_setting_more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/dp_50"
                android:background="@color/black_10"
                android:layout_height="@dimen/dp_1"/>

            <RelativeLayout
                android:id="@+id/rl_term"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dp_16"
                app:layout_constraintTop_toBottomOf="@id/rl_policy">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_setting_term"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dp_16"
                    android:src="@drawable/ic_setting_term" />

                <TextView
                    android:id="@+id/tv_setting_term"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:fontFamily="@font/roboto_500"
                    android:layout_toStartOf="@id/iv_next_term"
                    android:layout_toEndOf="@+id/iv_setting_term"
                    android:text="@string/setting_term"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_next_term"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dp_12"
                    android:src="@drawable/ic_setting_more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/dp_50"
                android:background="@color/black_10"
                android:layout_height="@dimen/dp_1"/>

            <RelativeLayout
                android:id="@+id/rl_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dp_16"
                app:layout_constraintTop_toBottomOf="@id/rl_term">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_setting_share"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dp_16"
                    android:src="@drawable/ic_setting_share" />

                <TextView
                    android:id="@+id/tv_setting_share"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:fontFamily="@font/roboto_500"
                    android:layout_toStartOf="@id/iv_next_share"
                    android:layout_toEndOf="@+id/iv_setting_share"
                    android:text="@string/setting_share_app"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_next_share"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dp_12"
                    android:src="@drawable/ic_setting_more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/dp_50"
                android:background="@color/black_10"
                android:layout_height="@dimen/dp_1"/>

            <RelativeLayout
                android:id="@+id/rl_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dp_16"
                app:layout_constraintTop_toBottomOf="@id/rl_share">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_setting_rate"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dp_16"
                    android:src="@drawable/ic_setting_rate" />

                <TextView
                    android:id="@+id/tv_setting_rate"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:fontFamily="@font/roboto_500"
                    android:layout_toStartOf="@id/iv_next_rate"
                    android:layout_toEndOf="@+id/iv_setting_rate"
                    android:text="@string/setting_rate_app"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_next_rate"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dp_12"
                    android:src="@drawable/ic_setting_more" />
            </RelativeLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>